# fscPropBench

./: .gitignore  README.md
scripts/: start_prop_bench.sh
src/prop_bench_control/: package.xml  setup.cfg  setup.py
src/prop_bench_control/launch/: prop_bench.launch.py
src/prop_bench_control/prop_bench_control/: controller.py  main.py  prop_bench_node.py  throttle_profile.py
src/prop_bench_control/prop_bench_control/gui/: motor_stand_gui.py  mplcanvas.py
src/prop_bench_control/throttle_profile/: step.csv
src/px4_configs/: px4_propbench.params
throttle_profile/: linear.csv  sine_10pct_5s.csv
